--- a/templates/includes/lower-nav.html
+++ b/templates/includes/lower-nav.html
@@ -2,9 +2,9 @@
     <ul class="navbar-nav w-auto mx-auto">
 
         <li class="nav-item">
-            <a class="font-body weight-semibold nav-link" href="#">
-                <div class="nav-icon-text">
-                    <div class="icon-circle bg-dark">
+            <a class="font-body weight-semibold nav-link lower-nav-link" href="#">
+                <div>
+                    <div class="lower-nav-icon-circle bg-dark">
                         <i class="fas fa-bug text-light text-center"></i>
                     </div>
                     <p class="text-dark ms-1 lower-nav-link-text">THE BEES</p>
@@ -13,10 +13,10 @@
         </li>
 
         <li class="nav-item">
-            <a class="font-body weight-semibold nav-link" href="#">
-                <div class="nav-icon-text">
-                    <div class="icon-circle bg-dark">
-                        <i class="fas fa-bug text-light text-center"></i>
+            <a class="font-body weight-semibold nav-link lower-nav-link" href="#">
+                <div>
+                    <div class="lower-nav-icon-circle bg-dark">
+                        <i class="fas fa-box-archive text-light text-center"></i>
                     </div>
                     <p class="text-dark ms-1 lower-nav-link-text">THE KIT</p>
                 </div>
@@ -24,10 +24,10 @@
         </li>
 
         <li class="nav-item">
-            <a class="font-body weight-semibold nav-link" href="#">
-                <div class="nav-icon-text">
-                    <div class="icon-circle bg-dark">
-                        <i class="fas fa-bug text-light text-center"></i>
+            <a class="font-body weight-semibold nav-link lower-nav-link" href="#">
+                <div>
+                    <div class="lower-nav-icon-circle bg-dark">
+                        <i class="fas fa-graduation-cap text-light text-center"></i>
                     </div>
                     <p class="text-dark ms-1 lower-nav-link-text">THE COURSES</p>
                 </div>
@@ -35,10 +35,10 @@
         </li>
 
         <li class="nav-item">
-            <a class="font-body weight-semibold nav-link" href="#">
-                <div class="nav-icon-text">
-                    <div class="icon-circle bg-dark">
-                        <i class="fas fa-bug text-light text-center"></i>
+            <a class="font-body weight-semibold nav-link lower-nav-link" href="#">
+                <div>
+                    <div class="lower-nav-icon-circle bg-dark">
+                        <i class="fas fa-jar text-light text-center"></i>
                     </div>
                     <p class="text-dark ms-1 lower-nav-link-text">THE GOOD STUFF</p>
                 </div>
@@ -46,13 +46,13 @@
         </li>
 
         <li class="nav-item">
-            <a class="font-body weight-semibold nav-link" href="#">
+            <a class="font-body weight-semibold nav-link lower-nav-link" href="#">
                 <p class="text-dark lower-nav-link-text">ALL PRODUCTS</p>
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="font-body weight-semibold nav-link" href="#">
+            <a class="font-body weight-semibold nav-link lower-nav-link" href="#">
                 <p class="text-dark lower-nav-link-text">BLOG</p>
             </a>
         </li>
