--- a/static/css/style.css
+++ b/static/css/style.css
@@ -149,74 +149,20 @@
 }
 
 
-/* icons */
+/* Upper Nav */
 
-.icon-circle {
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 18px;
-    width: 18px;
-}
-
-.icon-circle i {
-    padding: 5px;
-    font-size: 11px;
-}
-
-.icon-hex {
-    width: 20px;
-    height: 32px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #0F748A;
-}
-
-.icon-hex:before {
-    content: " ";
-    width: 0; height: 0;
-    border-right: 9px solid #0F748A;
-    border-top: 15px solid transparent;
-    border-bottom: 15px solid transparent;
-    position: absolute;
-    left: -9px;
-}
-
-.icon-hex::after {
-    content: " ";
-    width: 0; height: 0;
-    border-left: 9px solid #0F748A;
-    border-top: 15px solid transparent;
-    border-bottom: 15px solid transparent;
-    position: absolute;
-    right: -9px;
-}
-
-.icon-hex i {
-    font-size: 1.1em;
-}
-
-.bag-hex-link p {
-    position: relative;
-    left: -9px;
-}
-
-
-
-
-
-/* Nav */
-
-.logo-div * {
+.logo-div *,
+.logo-div-mobile * {
     margin: 0;
     padding: 0;
 }
 
 .logo-div h2 {
     font-size: 1.67rem;
+}
+
+.logo-text-mobile h2 {
+    font-size: 16px;
 }
 
 .logo-div p {
@@ -227,21 +173,17 @@
     width: 50px;
 }
 
+.logo-img-mobile {
+    width: 42px;
+    margin-bottom: 5px;
+}
+
 .logo-div a {
     display: flex;
 }
 
-.nav-icon-text {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-.lower-nav-link-text {
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
-}
+
 
 .ib-search-box {
     height: 42px;
@@ -257,17 +199,185 @@
     border: none;
     background: none;
     padding: 5px;
-    padding-left: 10px
+    padding-left: 10px;
+    flex-grow: 1;
 }
 
 .ib-search-box button {
     background-color: var(--mid-grey);
     border-radius: 0;
+    width: 42px;
+    border: none;
+    transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -webkit-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+}
+
+.ib-search-box button:hover {
+    background-color: var(--dark-grey);
+}
+
+.ib-search-box button i {
+    font-size: 20px;
+    line-height: unset;
+}
+
+.upper-nav-link:hover {
+    color: var(--dark);
+}
+
+.list-inline-item:not(:last-child) {
+    margin-right: 0.8rem;
+}
+
+
+.icon-hex {
+    width: 20px;
+    height: 32px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-hex:before {
+    content: " ";
+    width: 0; height: 0;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    position: absolute;
+    left: -9px;
+}
+
+.icon-hex::after {
+    content: " ";
+    width: 0; height: 0;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    position: absolute;
+    right: -9px;
+}
+
+.icon-hex,
+.icon-hex:before,
+.icon-hex::after {
+    transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+}
+
+.hex-nav-link:hover {
+    .bag-empty {
+        background-color: var(--dark);
+    }
+    .bag-empty:before {
+        border-right: 9px solid var(--dark);
+    }
+    .bag-empty:after {
+        border-left: 9px solid var(--dark);
+    }
+    .bag-contents {
+        background-color: var(--dark);
+    }
+    .bag-contents:before {
+        border-right: 9px solid var(--dark);
+    }
+    .bag-contents:after {
+        border-left: 9px solid var(--dark);
+    }
+    .bag-total {
+        color: var(--dark);
+    }
+}
+
+.bag-contents {
+    background: var(--blue);
+}
+
+.bag-contents:before {
+    border-right: 9px solid var(--blue);
+}
+
+.bag-contents:after {
+    border-left: 9px solid var(--blue);
+}
+
+.bag-empty {
+    background: var(--dark-grey);
+}
+
+.bag-empty:before {
+    border-right: 9px solid var(--dark-grey);
+}
+
+.bag-empty:after {
+    border-left: 9px solid var(--dark-grey);
+}
+
+.icon-hex i {
+    font-size: 1.1em;
+}
+
+.hex-nav-link p {
+    position: relative;
+    left: -9px;
+}
+
+
+/* Lower Nav */
+
+.lower-nav-link-text {
+    text-decoration: underline;
+    text-underline-offset: 4px;
+    text-decoration-thickness: 2px;
+    -webkit-text-decoration-color: rgba(20, 12, 0, 0);
+    text-decoration-color: rgba(20, 12, 0, 0);
+    transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+}
+
+.lower-nav-link:hover {
+    .lower-nav-link-text {
+        -webkit-text-decoration-color: rgba(20, 12, 0, 0);
+        text-decoration-color: rgba(20, 12, 0, 1);
+    }
+}
+
+.lower-nav-link > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.lower-nav-link-text {
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+.lower-nav-icon-circle {
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 18px;
+    width: 18px;
+}
+
+.lower-nav-icon-circle i {
+    padding: 5px;
+    font-size: 10px;
 }
 
 #delivery-banner h5 {
     font-size: 18px;
     letter-spacing: 1.8px;
 }
+
+
 
 
