--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,10 @@
 
 <body>
     <header class="container-fluid fixed-top">
-        <div id="uppernav" class="row bg-yellow pt-3 pb-2 d-none d-lg-flex">
+        <!-- Upper Nav - Large Screens Only -->
+        <div id="uppernav" class="row bg-yellow pt-4 pb-2 px-3 d-none d-lg-flex">
+
+            <!-- Logo -->
             <div class="logo-div font-title col-12 col-lg-4 my-auto">
                 <a href="{% url 'home' %}" class="nav-link">
                     <img src="{% static 'media/logo.svg' %}" alt="Island Bees Logo" class="logo-img me-2">
@@ -57,6 +60,8 @@
                     </div>
                 </a>
             </div>
+
+            <!-- Search -->
             <div class="col-12 col-lg-4 my-auto">
                 <form method="GET" action="">
                     <div class="ib-search-box">
@@ -67,6 +72,8 @@
                     </div>
                 </form>
             </div>
+
+            <!-- Main Nav Links -->
             <div class="col-12 col-lg-4 my-auto">
                 <ul class="list-inline list-unstyled text-end text-lg-right my-0">
                     <li class="list-inline-item dropdown">
@@ -111,18 +118,23 @@
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0"></div>
         </div>
-        <div class="row bg-yellow">
-            <nav class="navbar w-100 navbar-expand-lg ps-3 pe-3">
 
+        <!-- Lower Nav - Large Screens: Products Links | Medium/Small Screens: Main Nav & Products Collapsible -->
+        <div class="row bg-yellow">
+            <nav class="navbar w-100 navbar-expand-lg px-3 pt-2">
+
+                <!-- Mobile Nav Bar -->
                 <div class="uppernav-mobile d-flex d-lg-none w-100">
 
+                    <!-- Menu Toggle -->
                     <div class="col-2 col-sm-5 my-auto">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+                        <button class="navbar-toggler shadow-sm border-0 bg-yellow-light" type="button" data-toggle="collapse" data-target="#main-nav"
                             aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                     </div>
 
+                    <!-- Logo -->
                     <div class="logo-div-mobile col-2 my-auto font-title text-center d-none d-sm-block">
                         <a href="{% url 'home' %}" class="nav-link">
                             <img src="{% static 'media/logo.svg' %}" alt="Island Bees Logo" class="logo-img-mobile">
@@ -132,20 +144,21 @@
                         </a>
                     </div>
 
+                    <!-- Main Nav Links -->
                     <div class="col-10 col-sm-5 my-auto">
+
+                        <!-- Search Trigger -->
                         <ul class="my-0 text-end">
                             <li class="list-inline-item">
-                                <a class="text-dark-grey nav-link upper-nav-link" href="#" id="mobile-search"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="text-dark-grey nav-link upper-nav-link" data-toggle="collapse" href="#collapseSearch" role="button" aria-expanded="false" aria-controls="collapseSearch">
                                     <div class="text-center">
                                         <div><i class="fas fa-search fa-lg"></i></div>
                                         <p class="my-0 font-body">Search</p>
                                     </div>
                                 </a>
                             </li>
-
                             
-
+                            <!-- Account Dropdown Menu -->
                             <li class="list-inline-item dropdown">
                                 <a class="text-dark-grey nav-link upper-nav-link" href="#" id="user-options"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -154,7 +167,7 @@
                                         <p class="my-0 font-body">Account</p>
                                     </div>
                                 </a>
-                                <div class="dropdown-menu text-end border-0 account-dropdown" aria-labelledby="user-options">
+                                <div class="dropdown-menu text-end border-0 account-dropdown shadow bg-ib-light" aria-labelledby="user-options">
                                     {% if request.user.is_authenticated %}
                                     {% if request.user.is_superuser %}
                                     <a href="" class="dropdown-item">Product Management</a>
@@ -167,12 +180,14 @@
                                     {% endif %}
                                 </div>
                             </li>
+
+                            <!-- Shopping Bag -->
                             <li class="list-inline-item">
                                 <a class="nav-link hex-nav-link" href="">
                                     <div class="text-center ms-2">
                                         <div
                                             class="icon-hex {% if grand_total %}bag-contents{% else %}bag-empty{% endif %}">
-                                            <i class="fas fa-shopping-bag fa-lg text-light"></i>
+                                            <i class="fas fa-shopping-bag text-light"></i>
                                         </div>
                                         <p
                                             class="my-0 font-body bag-total {% if grand_total %}text-blue weight-bold{% else %}text-dark-grey weight-regular{% endif %}">
@@ -186,20 +201,20 @@
                                 </a>
                             </li>
 
-                            
                         </ul>
                     </div>
                 </div>
+                <!-- End of Mobile Nav Bar -->
 
 
-
+                <!-- Lower Nav - Product Links -->
                 <div class="collapse navbar-collapse" id="main-nav">
                     <ul class="navbar-nav w-auto mx-auto">
 
                         <li class="nav-item">
                             <a class="font-body weight-semibold nav-link lower-nav-link" href="#">
                                 <div>
-                                    <div class="lower-nav-icon-circle bg-dark">
+                                    <div class="lower-nav-icon-circle bg-ib-dark">
                                         <i class="fas fa-bug text-light text-center"></i>
                                     </div>
                                     <p class="text-dark ms-1 lower-nav-link-text">THE BEES</p>
@@ -221,7 +236,7 @@
                         <li class="nav-item">
                             <a class="font-body weight-semibold nav-link lower-nav-link" href="#">
                                 <div>
-                                    <div class="lower-nav-icon-circle bg-dark">
+                                    <div class="lower-nav-icon-circle bg-ib-dark">
                                         <i class="fas fa-graduation-cap text-light text-center"></i>
                                     </div>
                                     <p class="text-dark ms-1 lower-nav-link-text">THE COURSES</p>
@@ -232,7 +247,7 @@
                         <li class="nav-item">
                             <a class="font-body weight-semibold nav-link lower-nav-link" href="#">
                                 <div>
-                                    <div class="lower-nav-icon-circle bg-dark">
+                                    <div class="lower-nav-icon-circle bg-ib-dark">
                                         <i class="fas fa-jar text-light text-center"></i>
                                     </div>
                                     <p class="text-dark ms-1 lower-nav-link-text">THE GOOD STUFF</p>
@@ -262,7 +277,28 @@
                 <h5 class="font-body my-1">FREE DELIVERY ON ALL ORDERS OVER £{{ free_delivery_threshold }}!</h5>
             </div>
         </div>
+
+        <div class="collapse" id="collapseSearch">
+            <div class="row d-block d-lg-none bg-ib-light">
+                <div class="col-12 px-3 py-2">
+                    <form method="GET" action="">
+                        <div class="ib-search-box">
+                            <input type="text" name="q" placeholder="Search our products">
+                            <button type="submit">
+                                <i class="fas fa-search text-light"></i>
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        
+        
     </header>
+
+    <div class="bg-blue">
+
+    </div>
 
 
 
